Remove debug_count function from vars_in.cfg
Preparing to experiment with changing text colour. Want address space 5000x0+ for SP values. Debug feature was inherited with Desuuu fork. Not understood && not used in CR6 version, so easily sacrificed.

Will also require an edit of the corresponding DWIN_SET, to eliminate the variable debug_count

--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -895,13 +895,16 @@ script:
   REPEAT_LAST_PRINT
 run_as_gcode: true
 
-[t5uid1_var __debug]
-type: input
-address: 0x5001
-data_type: none
-script:
-  {% set counter = get_variable("debug_count", 0)|int + 1 %}
-  {% do set_variable("debug_count", counter) %}
-  {% if counter >= 10 %}
-    {% do switch_page("debug1") %}
-  {% endif %}
+#Legacy code from Desuuu version.
+#Not used.
+#Commented-out at v1.2.9, to liberate 5000x0+ address space.
+#[t5uid1_var __debug]
+#type: input
+#address: 0x5001
+#data_type: none
+#script:
+#  {% set counter = get_variable("debug_count", 0)|int + 1 %}
+#  {% do set_variable("debug_count", counter) %}
+#  {% if counter >= 10 %}
+#    {% do switch_page("debug1") %}
+#  {% endif %}
