Modified x, y and z position displays to show "0.0" in RED if NOT HOMED
As with CF6.1, the X, Y and Z position displays now turn RED and display 0.0, if the axes are not homed.
Same thing will happen if the motors are disabled or if they time-out.
The obective is to alert users to situations where homing is required before axes can be moved.

Requires DWIN_SET 0.4.0, in which the SP values for each of the 3 variables are now defined.
(X = 0x5000, Y=0x5010 Z=0x5020)

--- a/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
@@ -39,7 +39,7 @@ var_auto: file_name, tot_duration, temp_h0_current, temp_h0_target, temp_bed_cur
 [t5uid1_page move]
 id: 8
 var: move_step_icons
-var_auto: move_current_x, move_current_y, move_current_z, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, stepper_status
+var_auto: move_current_x, move_current_y, move_current_z, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, stepper_status, current_x_colour, current_y_colour, current_z_colour
 
 [t5uid1_page settings_menu]
 id: 9
@@ -72,7 +72,7 @@ var_auto: level_probing_icons, temp_h0_current, temp_h0_target, temp_bed_current
 [t5uid1_page filament]
 id: 15
 var: filament_icons, filament_length, move_step_icons
-var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, move_current_z, move_current_y, move_current_x
+var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, move_current_z, move_current_y, move_current_x, current_x_colour, current_y_colour, current_z_colour
 
 [t5uid1_page print_menu]
 id: 16
