--- a/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
@@ -227,7 +227,7 @@ script:
   {% do set_variable("pid_heater", t5uid1.constants.heater_h0) %}
   {% do set_variable("pid_temp", t5uid1.constants.temp_pla.hotend) %}
 
-[t5uid1_routine __info]
-trigger: enter_pre
-page: info
-script: {% do set_variable("debug_count", 0) %}
+#[t5uid1_routine __info]
+#trigger: enter_pre
+#page: info
+#script: {% do set_variable("debug_count", 0) %}
