--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -294,19 +294,67 @@ script: { get_variable("filament_length", 150) }
 type: output
 address: 0x3126
 data_type: int16
-script: { (printer.gcode_move.gcode_position.x * 10)|round|int }
+script: 
+  {% if "x" not in printer.toolhead.homed_axes %}
+    { -0 }
+  {% else %}
+    { (printer.gcode_move.gcode_position.x * 10)|round|int }
+  {% endif %}
+
+[t5uid1_var current_x_colour]
+type: output
+address: 0x5003
+data_type: uint16
+script:
+  {% if "x" not in printer.toolhead.homed_axes %}
+    { "0xF800"|int(base=16) }
+  {% else %}
+    { "0x0000"|int(base=16) }
+  {% endif %}
 
 [t5uid1_var move_current_y]
 type: output
 address: 0x3127
 data_type: int16
-script: { (printer.gcode_move.gcode_position.y * 10)|round|int }
+script: 
+  {% if "y" not in printer.toolhead.homed_axes %}
+    { -0 }
+  {% else %}
+    { (printer.gcode_move.gcode_position.y * 10)|round|int }
+  {% endif %}
+
+[t5uid1_var current_y_colour]
+type: output
+address: 0x5013
+data_type: uint16
+script:
+  {% if "y" not in printer.toolhead.homed_axes %}
+    { "0xF800"|int(base=16) }
+  {% else %}
+    { "0x0000"|int(base=16) }
+  {% endif %}
 
 [t5uid1_var move_current_z]
 type: output
 address: 0x3128
 data_type: int16
-script: { (printer.gcode_move.gcode_position.z * 10)|round|int }
+script:
+  {% if "z" not in printer.toolhead.homed_axes %}
+    { -0 }
+  {% else %}
+    { (printer.gcode_move.gcode_position.z * 10)|round|int }
+  {% endif %}
+
+[t5uid1_var current_z_colour]
+type: output
+address: 0x5023
+data_type: uint16
+script:
+  {% if "z" not in printer.toolhead.homed_axes %}
+    { "0xF800"|int(base=16) }
+  {% else %}
+    { "0x0000"|int(base=16) }
+  {% endif %}
 
 [t5uid1_var move_step_icons]
 type: output
