--- a/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
@@ -10,18 +10,17 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
 [t5uid1_page print_status]
 id: 2
 var_auto:
-  file_name, tot_duration, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, printtime_elapsed, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, RunoutSensor_State
+  file_name, status_remaining, printtime_elapsed, tot_duration, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, LED_State, RunoutSensor_State, move_current_x, move_current_y, move_current_z
 
 [t5uid1_page print_adjust]
 id: 3
 var_auto:
-  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed, status_percent, status_icons
+  fan_speed, adjust_feedrate, adjust_flowrate, level_offset, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, LED_State
 
 [t5uid1_page print_finished]
 id: 4
-var: status_percent, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed
 var_auto:
-  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, status_icons, fan_speed
+  file_name, status_remaining, printtime_elapsed, tot_duration, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, LED_State, RunoutSensor_State, move_current_x, move_current_y, move_current_z
 
 [t5uid1_page temp_menu]
 id: 5
@@ -34,7 +33,7 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, st
 
 [t5uid1_page print_paused]
 id: 7
-var_auto: file_name, tot_duration, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, printtime_elapsed, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, RunoutSensor_State
+var_auto: file_name, tot_duration, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, printtime_elapsed, status_percent, status_icons, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, RunoutSensor_State, LED_State, status_remaining, move_current_x, move_current_y, move_current_z
 
 [t5uid1_page move]
 id: 8
@@ -53,8 +52,7 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, le
 [t5uid1_page paused_print_adjust]
 id: 11
 var: filament_icons, filament_length
-var_auto:
-  temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, fan_speed, adjust_feedrate, adjust_flowrate, level_offset, printtime_elapsed, status_percent, status_icons
+var_auto: fan_speed, adjust_feedrate, adjust_flowrate, level_offset, LED_State, temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
 
 [t5uid1_page leveling_manual]
 id: 12
