--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -69,7 +69,7 @@ script:
           PAUSE
         {% else %}
           # Assume the host uses an Octoprint API to send the pause command, instead of using the virtual sd card
-          # CAUTION: This is legacy code from Desuuu - other DGUS-Reloaded code may REQUIRE the use of the virtual sd card.
+          # CAUTION: This is legacy code from Desuuuu - other DGUS-Reloaded code may REQUIRE the use of the virtual sd card.
           RESPOND TYPE=command MSG=action:pause
         {% endif %}
       {% endif %}
@@ -339,7 +339,7 @@ script:
     BED_MESH_CLEAR
     BED_MESH_CALIBRATE
     #  NOTE: CALIBRATE automatically updates the mesh profile called "default"
-    #  Trying to make the profile name a variable, but not yet working...
+    #  Trying to make the profile name a variable, but SAVE CONFIG to a variable name is not supported by Klipper...
     {% do start_routine("show_probing_screen") %}
   {% endif %}
 run_as_gcode: true
