--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -47,7 +47,7 @@ type: output
 address: 0x30e7
 data_type: str
 data_len: 15
-script: { get_duration(printer.t5uid1.print_duration) }
+script: { get_duration(printer.print_stats.print_duration) }
 
 [t5uid1_var status_percent]
 type: output
@@ -491,6 +491,13 @@ script:
     {"Not working"}    
   {% endif %}
 
+[t5uid1_var status_remaining]
+type: output
+address: 0x4030
+data_type: str
+data_len: 15
+script: { get_remaining(printer.t5uid1.time_remaining) }
+
 [t5uid1_var fan_speed]
 type: output
 address: 0x4000
@@ -507,7 +514,7 @@ type: output
 address: 0x4001
 data_type: uint16
 script:
-  { (printer['output_pin hotend_LED'].value)|int }
+  { (printer["output_pin hotend_LED"].value)|int }
 
 [t5uid1_var RunoutSensor_State]
 type: output
