Updated the Mainsail printer config files
See readme files for details

--- a/Related Changes/If you have a BTT SKR CR6 motherboard/Overwrite these Klipper host files/Use these configuration files to  tailor your Klipper config/printer.cfg
+++ b/Related Changes/If you have a BTT SKR CR6 motherboard/Overwrite these Klipper host files/Use these configuration files to  tailor your Klipper config/printer.cfg
@@ -1,4 +1,4 @@
-# Last Updated: 18 Aug 2023
+# Last Updated: 15 Mar 2024
 #
 # This file contains common pin mappings for the BIGTREETECH SKR CR6 # V1.0 motherboard. 
 # To use this config, the firmware should be compiled for the STM32F103 with a "28KiB bootloader" and USB communication. 
@@ -19,7 +19,6 @@
 # From the DWIN Calibrate menu:
 #   PID Tune the HotEnd and Bed
 # From the Mainsail CONSOLE:
-#   Calibrate your Z Offset per: https://www.klipper3d.org/Probe_Calibrate.html#calibrating-probe-z-offset
 #   With a cold bed and a cold clean nozzle  Set your Z-Offset, per: https://www.klipper3d.org/Probe_Calibrate.html#calibrating-probe-z-offset
 #   Run RUN_ABL_COLD
 #   Run RUN_ABL_BED_60  (Expect a 5 minute delay before probing starts, to let the bed heatsoak and stabilize dimensionally.)
@@ -47,7 +46,7 @@
 # IF you do not have moonraker timelapse installed, comment out this optional cfg:
 #[include timelapse.cfg]
 
-[include Development_Macros]
+[include Dev_Macros.cfg]
 ###############################################################
 ######## Configuration Settings ###############################
 ###############################################################
@@ -66,6 +65,7 @@ position_min: -2
 position_endstop: -2
 position_max: 235
 homing_speed: 50
+full_steps_per_rotation: 200
 
 [tmc2209 stepper_x]
 uart_pin: PC11
@@ -88,6 +88,7 @@ position_min: 0
 position_endstop: 0
 position_max: 235
 homing_speed: 50
+full_steps_per_rotation: 400
 
 [tmc2209 stepper_y]
 uart_pin: PC11
@@ -108,6 +109,7 @@ position_max: 250
 homing_speed: 4
 second_homing_speed: 1
 homing_retract_dist: 2.0
+full_steps_per_rotation: 200
 
 [tmc2209 stepper_z]
 uart_pin: PC11
@@ -174,7 +176,7 @@ microsteps: 64
 
 # Orbiter extruder
 gear_ratio: 7.5:1
-rotation_distance: 36.870
+rotation_distance: 35.524
 
 # BMG extruder
 # gear_ratio: 51:17
@@ -207,6 +209,7 @@ min_extrude_temp: 180
 # Calibrate your printer's pressure advance per: https://www.klipper3d.org/Pressure_Advance.html
 # and edit this setting.
 pressure_advance: 0.04
+
 [tmc2209 extruder]
 uart_pin: PC11
 tx_pin: PC10
@@ -233,6 +236,8 @@ pid_Kd: 1000
 
 
 # Miscellaneous Settings #
+
+#[firmware_retraction]
 
 [fan]
 pin: PC6
@@ -265,6 +270,20 @@ value: 0  ; set off by default at power up
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 restart_method: command
 
+[temperature_sensor mcu_temp]
+sensor_type: temperature_mcu
+min_temp: 10
+max_temp: 100
+
+[temperature_sensor raspberry_pi_4B]
+sensor_type: temperature_host
+min_temp: 10
+max_temp: 100 
+
+# Comment-out these next two values, or edit them, using QUERY_ADC NAME-'temperature_mcu mcu_temp' to obtain the sensor_adc1 value 
+# and use an independent temperature sensor (e.g. bed or nozzle?) to estimate the actual mcu temperature, while everything is at room ambient temp.
+#sensor_temperature1: 23
+#sensor_adc1: 0.428022
 
 # Kinematics Settings #
 
