--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/inputShaper.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/inputShaper.cfg
@@ -5,9 +5,9 @@
 # since it is highly unlikely that your system and mine have the same resonant response(s).
 
 [input_shaper]
-shaper_freq_x: 60.2
+shaper_freq_x: 59.0
 shaper_type_x: 2hump_ei
-shaper_freq_y: 34.8
+shaper_freq_y: 37.8
 shaper_type_y: mzv
 
 #### UNCOMMENT ALL OF THE LINES BELOW, TO PERFORM RESONANCE MEASUREMENT ON THIS PRINTER USING AN ADXL345 CONNECTED TO THE PI ###
@@ -24,4 +24,4 @@ shaper_type_y: mzv
 #[resonance_tester]
 #accel_chip: adxl345
 #probe_points:
-#   117.5,117.5,20  # edit these X,Y,Z coordinates to start the test with the probe positioned above the center of the printer bed
+#   117.5,117.5,20  # edit these X,Y,Z coordinates to start the test with the probe positioned 20mm above the center of the printer bed, for the nozzle, and 200, 235,0 for the SE bed
