--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For 4.5.2 MB - Use these files to  tailor your Klipper config/DGUS-Reloaded.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For 4.5.2 MB - Use these files to  tailor your Klipper config/DGUS-Reloaded.cfg
@@ -6,6 +6,10 @@ machine_name: CR6-SE_Klipper
 #   The machine name shown on the information page.
 brightness: 100
 #   The default brightness for the touchscreen (as a value from 0 to 100).
+boot_sound: -1
+#   Disable music playback (The CR6 DWIN display has a buzzer, not a speaker, it can not support music playback)
+volume: 100
+#   The default volume for the touchscreen buzzer (as a value from 0 to 100).
 x_min: -2  # My printer's nozzle happens to be ~2mm to the left of the bed, when homed.
 #   This can be used to provide a lower limit (in mm) to X moves done using the
 #   touschreen. Movements will still be limited by your [stepper_x]
