--- a/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/printer.cfg
+++ b/Related Changes/If you have a Creality CR6 motherboard/Overwrite these Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB - Use these files to  tailor your Klipper config/printer.cfg
@@ -16,7 +16,6 @@
 # From the DWIN Calibrate menu:
 #   PID Tune the HotEnd and Bed
 # From the Mainsail CONSOLE:
-#   Calibrate your Z Offset per: https://www.klipper3d.org/Probe_Calibrate.html#calibrating-probe-z-offset
 #   With a cold bed and a cold clean nozzle  Set your Z-Offset, per: https://www.klipper3d.org/Probe_Calibrate.html#calibrating-probe-z-offset
 #   Run RUN_ABL_COLD
 #   Run RUN_ABL_BED_60  (Expect a 5 minute delay before probing starts, to let the bed heatsoak and stabilize dimensionally.)
@@ -42,9 +41,9 @@
 # NOTE: OPTIONALLY - You can copy the contents of CR6.cfg into this file and remove this include statement.
 
 # IF you do not have moonraker timelapse installed, comment out this optional cfg:
-#[include timelapse.cfg]
+[include timelapse.cfg]
 
-[include Development_Macros]
+[include Dev_Macros.cfg]
 ###############################################################
 ######## Configuration Settings ###############################
 ###############################################################
@@ -63,6 +62,7 @@ position_min: -2
 position_endstop: -2
 position_max: 235
 homing_speed: 50
+full_steps_per_rotation: 200
 
 # NOTE: Test printer uses a 0.9 degree motor for the Y axis.
 # If you have the stock 1.8 deg motor, change rotation_distance to 40
@@ -71,12 +71,13 @@ step_pin: PB6
 dir_pin: PB5
 enable_pin: !PC3
 microsteps: 16
-rotation_distance: 20
+rotation_distance: 40
 endstop_pin: PC5
 position_min: -2
 position_endstop: -2
 position_max: 235
 homing_speed: 50
+full_steps_per_rotation: 400
 
 [stepper_z]
 step_pin: PB4
@@ -90,7 +91,7 @@ position_max: 250
 homing_speed: 4
 second_homing_speed: 1
 homing_retract_dist: 2.0
-
+full_steps_per_rotation: 200
 
 # Probe Settings #
 
@@ -134,11 +135,11 @@ microsteps: 16
 #  If you have the BMG or BMG clone extruder - Comment-Out the Orbiter settings and uncomment the two BMG settings
 #  If you have any other extruder, you will need to find the correct settings and insert them here. Comment-Out the Orbiter settings.
 # stock extruder
-# rotation_distance: 30.4768
+#rotation_distance: 30.4768
 
 # Orbiter extruder
 gear_ratio: 7.5:1
-rotation_distance: 36.870
+rotation_distance: 35.524
 
 # BMG extruder
 # gear_ratio: 51:17
@@ -169,8 +170,8 @@ max_temp: 320  ; Using DragonHF hotend
 min_extrude_temp: 180
 
 # Calibrate your printer's pressure advance per: https://www.klipper3d.org/Pressure_Advance.html
-# and edit this setting.
-pressure_advance: 0.04
+# and edit this setting. (NOTE Can also override this setting in slicer, if available, on a per-filament basis)
+pressure_advance: 0.0325
 
 
 # Bed Heater Settings #
@@ -190,6 +191,8 @@ pid_Kd: 1000
 
 
 # Miscellaneous Settings #
+
+#[firmware_retraction]
 
 [fan]
 pin: PB15
@@ -213,6 +216,20 @@ value: 0  ; set off by default at power up
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 restart_method: command
 
+[temperature_sensor mcu_temp]
+sensor_type: temperature_mcu
+min_temp: 10
+max_temp: 100
+
+[temperature_sensor raspberry_pi_4B]
+sensor_type: temperature_host
+min_temp: 10
+max_temp: 100 
+
+# Comment-out these next two values, or edit them, using QUERY_ADC NAME-'temperature_mcu mcu_temp' to obtain the sensor_adc1 value 
+# and use an independent temperature sensor (e.g. bed or nozzle?) to estimate the actual mcu temperature, while everything is at room ambient temp.
+#sensor_temperature1: 23
+#sensor_adc1: 0.428022
 
 # Kinematics Settings #
 
