--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -337,9 +337,9 @@ script:
       G28
     {% endif %}
     BED_MESH_CLEAR
-    BED_MESH_CALIBRATE
+    BED_MESH_CALIBRATE PROFILE=default METHOD=automatic
     #  NOTE: CALIBRATE automatically updates the mesh profile called "default"
-    #  Trying to make the profile name a variable, but SAVE CONFIG to a variable name is not supported by Klipper...
+    #  Tried to make the profile name a variable, but SAVE CONFIG to a variable name is not supported by Klipper...
     {% do start_routine("show_probing_screen") %}
   {% endif %}
 run_as_gcode: true
