--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,4 @@ out
 .config.old
 klippy/.version
 test\*.*
-klippy/extras/t5uid1/Was/probe.py
-klippy/extras/t5uid1/Was/t5uid1.py
+klippy/extras/t5uid1/Was/*.*
