Patch DGUS-Reloaded.cfg to fix Issue#8
This fixes Issue#8, by modifying the STORE_REPRINT_PARAMETERS macro in DGUS-Reloaded.cfg to handle gcode files stored in subfolders on the virtural SD card,

--- a/Related Changes/BTT SKR CR6 Only/Custom Klipper host files/DGUS-Reloaded.cfg
+++ b/Related Changes/BTT SKR CR6 Only/Custom Klipper host files/DGUS-Reloaded.cfg
@@ -57,7 +57,7 @@ description: Saves parameters required to reprint same job.
 gcode:
     {% set svv = printer.save_variables.variables %}
     {% set filepath=printer.virtual_sdcard.file_path %}
-    {% set filename=filepath.split('/')%}
+    {% set filename=filepath.split('/gcodes/')%}
     SAVE_VARIABLE VARIABLE=last_file VALUE='"{ filename[-1] }"'
 
 [gcode_macro SET_DISABLE_PAUSE_STOP]
