--- a/Related Changes/Creality CR6 Mobo/Custom Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB/DGUS-Reloaded.cfg
+++ b/Related Changes/Creality CR6 Mobo/Custom Klipper host files/For ERA 1.1.0.3 and 4.5.3 MB/DGUS-Reloaded.cfg
@@ -57,7 +57,7 @@ description: Saves parameters required to reprint same job.
 gcode:
     {% set svv = printer.save_variables.variables %}
     {% set filepath=printer.virtual_sdcard.file_path %}
-    {% set filename=filepath.split('/')%}
+    {% set filename=filepath.split('/gcodes/')%}
     SAVE_VARIABLE VARIABLE=last_file VALUE='"{ filename[-1] }"'
 
 [gcode_macro SET_DISABLE_PAUSE_STOP]
