Implement Print Time Remaining as a count-down timer
Use the slicer's estimated total print-time (reported in the first M73 R message, as a starting point.
Subtract the self._print_diuration variable from the slicer_estimated_print_time variable, to calculate self._print_time_remaining.

Changes vars_out.cfg to use the new _print_time_remaining variable instead of using the Klipper-calculated value.

--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -47,7 +47,8 @@ type: output
 address: 0x30e7
 data_type: str
 data_len: 15
-script: { get_duration(printer.print_stats.print_duration) }
+#script: { get_duration(printer.print_stats.print_duration) }
+script: { get_duration(printer.t5uid1.print_duration) }
 
 [t5uid1_var status_percent]
 type: output
