Deconflict two variables in memory
While building a memory map, discovered the final two bytes of the filename variable overlaps the start byte of the total duration variable.  Changed start address of filename, to remove the overlap.

--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -470,7 +470,7 @@ type: output
 #     3. Max # of characters that fit on 272-pixel screen = 26
 #     4. Max specifiable field length = 32 characters, forced by T5UID1 messaging code, somewhere...
 #     TODO: Consider how to split longer filenames into chunks & display on a rotating basis??
-address: 0x31c1
+address: 0x31C0
 data_type: str
 data_len: 32
 script:
