Implements support for DWIN_SET Component at version 0.4.2
Adds a closed-loop scrollable list displaying all the .gcode files on the VirtualSD card.
The list is automatically sorted from most recent to the oldest "Last Modified" date.
Implements printing of the top file in the list. (Replaces "repeat print last file")
Supports a "Refresh" button to update and sort the current contents of ~/printer_data/gcodes" on the Print_Menu page.

--- a/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
@@ -74,7 +74,7 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, mo
 
 [t5uid1_page print_menu]
 id: 16
-var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, last_printed_filename
+var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target, print_this_file, filelist_posn1, filelist_posn2, filelist_posn3, filelist_posn4, filelist_posn5
 
 [t5uid1_page z_offset_menu]
 id: 17
