Teaked print_menu UI aesthetics. fileslist display now places file to print in center of list, brighter and in larger font. Choices above and below that file are dimmer and in diminishing font size.

--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -919,7 +919,7 @@ type: input
 address: 0x2034
 data_type: uint16
 script:
-    {% do set_variable("scroll_index", data)  %}
+    {% do set_variable("scroll_index", 2)  %}
     {% do capture_gcode_files('~/printer_data/gcodes') %}
     {% do start_routine("trigger_full_update") %}
 
