Add support for Delete File button at DWIN_SET v 0.4.3
Adds __delete_File to vars_in.cfg
Adds delete_file() function to t5uid1.py
Adds comments to document the new Print file function in vars_out.cfg

--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -914,6 +914,16 @@ script:
   SDCARD_PRINT_FILE FILENAME="{print_this_file}"
 run_as_gcode: true
 
+[t5uid1_var __delete_file]
+type: input
+address: 0x402A
+data_type: none
+script:
+  {% set scroll_index = get_variable("scroll_index") %}
+  {% do delete_file(scroll_index) %}
+  {% do capture_gcode_files('~/printer_data/gcodes') %}
+  {% do start_routine("trigger_full_update") %}
+
 [t5uid1_var __reset_scroll_index]
 type: input
 address: 0x2034
