--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -530,6 +530,10 @@ address: 0x4007
 data_type: str
 data_len: 32
 script: 
+  # Retrieve the current scroll_index
+  # Capture the filename of the corresponding file displayed at the center of the scrolling list
+  # Save the filename in the variable for retrieval by the __repeat_last_print routine, if the Print button is pressed
+  # Send the filename to the display, to be displayed above the Print button
   {% set scroll_index = get_variable("scroll_index") %}
   {% set print_this_file = specific_fpname(2, scroll_index)|trim %}
   {% do set_variable("print_file_name", print_this_file)  %}
