--- a/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_in.cfg
@@ -917,19 +917,22 @@ run_as_gcode: true
 [t5uid1_var __delete_file]
 type: input
 address: 0x402A
-data_type: none
+data_type: uint16
 script:
-  {% set scroll_index = get_variable("scroll_index") %}
-  {% do delete_file(scroll_index) %}
-  {% do capture_gcode_files('~/printer_data/gcodes') %}
-  {% do start_routine("trigger_full_update") %}
+  {% set t5uid1 = printer.t5uid1 %}
+  {% if data == t5uid1.constants.popup_confirmed %}
+    {% set scroll_index = get_variable("scroll_index") %}
+    {% do delete_file(scroll_index) %}
+    {% do capture_gcode_files('~/printer_data/gcodes') %}
+    {% do start_routine("trigger_full_update") %}
+  {% endif %}
 
 [t5uid1_var __reset_scroll_index]
 type: input
 address: 0x2034
 data_type: uint16
 script:
-    {% do set_variable("scroll_index", 2)  %}
+    {% do set_variable("scroll_index", 0)  %}
     {% do capture_gcode_files('~/printer_data/gcodes') %}
     {% do start_routine("trigger_full_update") %}
 
