Reset FeedRate and FlowRate when entering Print_Finished screen
Solves Issue #47, by running M220 S100 and M221 S100 before switching to the print finished screen.
Provides an opportunity to visually ensure that those two factors have been reset, before exiting the print_finished screen, but removes the risk that a user will forget to reset those two parameters after a print.

--- a/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/routines.cfg
@@ -16,7 +16,11 @@ script:
   {% if sound >= 0 %}
     {% do play_sound(sound) %}
   {% endif %}
+  # Reset feedrate and flowrate multipliers, to solve Issue 47
+  M220 S100
+  M221 S100
   {% do switch_page("print_finished") %}
+run_as_gcode: true
 
 [t5uid1_routine trigger_full_update]
 trigger: manual
