Minor bug fixes and enhancements
Updated the Information page to fix issue#38.
Added a variable to vars_out.cfg, to brand the Klipper Component with its version number.  This value is read and displayed on the Information Page at DWIN_SET version 0.4.4 and subs.
Modified the routine that updates the print time parameters, to delay the print time remaining "countdown" until the printer starts drawing the purge line, since the pre-heating and initial probing times are not included in the slicer's estimate of the print duration.

--- a/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/pages.cfg
@@ -92,7 +92,7 @@ var_auto: temp_h0_current, temp_h0_target, temp_bed_current, temp_bed_target
 
 [t5uid1_page info]
 id: 20
-var: info_machine, info_build_volume, info_version
+var: info_machine, info_build_volume, info_klipper_version, info_t5uid1_version
 
 [t5uid1_page debug1]
 id: 240
