--- a/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
+++ b/klippy/extras/t5uid1/dgus_reloaded/vars_out.cfg
@@ -442,12 +442,19 @@ script:
                             (limits.y_max - limits.y_min)|round(0, 'floor')|int,
                             (limits.z_max - limits.z_min)|round(0, 'floor')|int) }
 
-[t5uid1_var info_version]
+[t5uid1_var info_klipper_version]
+type: output
+address: 0x3190
+data_type: str
+data_len: 32
+script: { printer.t5uid1.version }
+
+[t5uid1_var info_t5uid1_version]
 type: output
 address: 0x3163
 data_type: str
-data_len: 16
-script: { printer.t5uid1.version }
+data_len: 10
+script: {"v 1.3.5"}
 
 [t5uid1_var wait_icons]
 type: output
