Updates the Related Changes subfolder contents
Removed some outdated info.  Clarified some instructions.  Generated new Release Notes.

--- a/Related Changes/BTT SKR CR6 Only/Custom Klipper host files/printer.cfg
+++ b/Related Changes/BTT SKR CR6 Only/Custom Klipper host files/printer.cfg
@@ -1,13 +1,13 @@
-# Last Updated: 15 Mar 2024
+# Last Updated: 22 Dec 2024
 #
 # This file contains common pin mappings for the BIGTREETECH SKR CR6 # V1.0 motherboard. 
 # To use this config, the firmware should be compiled for the STM32F103 with a "28KiB bootloader" and USB communication. 
 # Also, select "Enable extra low-level configuration options" and 
 # configure "GPIO pins to set at micro-controller startup" to "!PA14".
 
-# The "make flash" command does not work on the SKR CR6.
-# Instead, after running "make", copy the generated "out/klipper.bin" file to 
-# a file named "firmware.bin" on an SD card and then restart the SKR CR6 V1.0 with that SD card inserted.
+
+# NOTE: If you started with a clean installation of Klipper, you can not build and flash your own Klipper.bin file.
+#       You must instead flash the SKR CR6 motherboard with the file \Related Changes\BTT SKR CR6 Only\Flash  motherbd\firmware.bin       
 
 # See https://www.klipper3d.org/Config_Reference.html for an explanation of the parameters used in this file.
 
@@ -290,9 +290,9 @@ max_temp: 100
 # NOTE: Reduce these velocity and acceleration values if NOT using InputShaper
 [printer]
 kinematics: cartesian
-max_velocity: 500
-max_accel: 3000
-max_accel_to_decel: 1500
+max_velocity: 260
+max_accel: 3500
+MINIMUM_CRUISE_RATIO: 0.5
 square_corner_velocity: 5
 max_z_velocity: 30
 max_z_accel: 600
