--- a/Related Changes/Creality CR6 Mobo/Custom Klipper host files/For 4.5.2 MB/printer.cfg
+++ b/Related Changes/Creality CR6 Mobo/Custom Klipper host files/For 4.5.2 MB/printer.cfg
@@ -1,4 +1,4 @@
-# Last Updated: 15 Mar 2024
+# Last Updated: 22 Dec 2024
 #
 # This file contains common pin mappings for the Creality 4.5.2 motherboard. 
 # The pin mappings for the BTT SKR CR6 motherboard are available in the Related Changes folder printer.cfg file for that board
@@ -61,8 +61,6 @@ position_max: 235
 homing_speed: 50
 full_steps_per_rotation: 200
 
-# NOTE: Test printer uses a 0.9 degree motor for the Y axis.
-# If you have the stock 1.8 deg motor, change rotation_distance to 40
 [stepper_y]
 step_pin: PB6
 dir_pin: PB5
@@ -74,7 +72,7 @@ position_min: -2
 position_endstop: -2
 position_max: 235
 homing_speed: 50
-full_steps_per_rotation: 400
+full_steps_per_rotation: 200
 
 [stepper_z]
 step_pin: PB4
@@ -233,9 +231,9 @@ max_temp: 100
 # NOTE: Reduce these velocity and acceleration values if NOT using InputShaper
 [printer]
 kinematics: cartesian
-max_velocity: 500
-max_accel: 3000
-max_accel_to_decel: 1500
+max_velocity: 260
+max_accel: 3500
+MINIMUM_CRUISE_RATIO: 0.5
 square_corner_velocity: 5
 max_z_velocity: 30
 max_z_accel: 600
